# open-ventilator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCppUnit.cmake
docs/: CMakeLists.txt  README.md
docs/00-project-management-plan/source/: conf.py  id.rst  index.rst  project_mgmt.rst
docs/01-risk-management-plan/: conf.py  index.rst
docs/01-risk-management-plan/source/: index.rst
docs/drafts/: CMakeLists.txt
docs/drafts/OVP-0001-Project-Management-Plan/: CMakeLists.txt
docs/drafts/OVP-0001-Project-Management-Plan/source/: conf.py  configuration_mgmt.rst  resolution.rst  software_dev.rst  system_requirements.rst  testing_phases.rst
docs/drafts/OVP-0002-hardware-api-requirements/: CMakeLists.txt
docs/drafts/OVP-0002-hardware-api-requirements/source/: conf.py  gpio.rst  gpio.rst.new  identification.rst  index.rst  introduction.rst
source/: CMakeLists.txt
source/corelib/include/: alarm_defs.h  compliance.h  ovp.h  vent_defs.h  vent_equations.h  vent_preferences.h
source/corelib/unittest/: CMakeLists.txt  compliance_test.cpp
source/hardware-lib/include/: LEDS.h
source/vmath/: CMakeLists.txt
source/vmath/include/: compliance.h
source/vmath/unittest/: CMakeLists.txt  compliance_test.cpp  cppunit_main.cpp
